# PyIslamSDK-Quran

./: README.md  README.md2  UploadToGitHub.py  pyproject.toml  setup.py
.github/workflows/: codeql.yml  pypi.yml  readme-workflow.yml
PyIslamSDK_Quran/: cli.py
PyIslamSDK_Quran/dbs/: quran.db
pyislamsdk_quran/: __init__.py  audios.py  cli.py  quran.py
pyislamsdk_quran/dbs/: config.py  quran.db
